chore[style]: reduce promo page height to prevent appear scrollbar in chrome browser

--- a/src/app/components/promo-card/promo-card.component.scss
+++ b/src/app/components/promo-card/promo-card.component.scss
@@ -22,7 +22,7 @@
   .card-img {
     height: auto;
     min-height: 12.5rem;
-    max-height: 42.5rem;
+    max-height: 41rem;
 
     width: 100%;
     min-width: 12.5rem;
